# white_rabbit

./: .gitignore  CLAUDE.md  README.md  eslint.config.mjs  package-lock.json  package.json
.claude/agents/: automation-scout.md  backend-dev.md  doc-updator.md  duplicate-checker.md  followup-suggestor.md  frontend-dev.md  learning-extractor.md  ui-ux-designer.md
.claude/commands/: wrap-session.md
.claude/context/: detailspanel_review.md
.github/workflows/: claude-code-review.yml
api/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  TTS_IMPLEMENTATION.md  TTS_QUICK_START.md  TTS_VERIFICATION_CHECKLIST.md  pyproject.toml  vercel.json
api/docs/: ERROR_HANDLING.md  calculate_similarity.cypher  create_category.cypher  create_contraints.cypher  create_fulltext_index.cypher  create_location.cypher  create_mysteries.cypher  create_time_period.cypher
api/src/: config.py  exception_handlers.py  exceptions.py  main.py  middleware.py
api/src/db/: __init__.py  neo4j.py
api/src/routers/: graph.py  mysteries.py  nodes.py  search.py  tts.py
api/src/schemas/: __init__.py  common.py  error.py  graph.py  mystery.py  node.py  search.py  tts.py
api/src/services/: __init__.py  graph_service.py  mystery_service.py  node_service.py  search_service.py  tts_model.py  tts_service.py  url_service.py
api/tests/: conftest.py  test_search.py
app/: layout.tsx  page.tsx
app/components/: Header.tsx
app/types/: errorResponse.ts  index.ts
scripts/: generate_audio.py
web/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts
web/app/: globals.css  layout.tsx  loading.tsx  page.tsx
web/components/: Footer.tsx  Header.tsx
web/config/: url.ts
web/hooks/: useClickOutside.ts
web/i18n/: index.ts  locales.ts  request.ts  routing.ts
web/messages/: en.json
web/store/: filterStore.ts  index.ts  mysteryStore.ts  quoteStore.ts  searchStore.ts
web/types/: db.ts  graph.ts  index.ts  (+5 more)
(+62 files in other folders)
