[build-system]
requires = ["setuptools >= 65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "white_rabbit"
description = "FastAPI backend for White Rabbit mystery exploreation project"
requires-python = ">=3.11"
version= "0.0.1"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "neo4j",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "kokoro>=0.9.2",
    "soundfile>=0.12.0",
    "aiofiles>=23.0.0",
    "numpy>=1.24.0"
]
authors= [
    { name = "Gihun Ko Stephen", email = "rhrlgns96@gmail.com" }
]