[build-system]
requires = ["setuptools >= 65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "white_rabbit"
description = "FastAPI backend for White Rabbit mystery exploreation project"
requires-python = ">=3.11"
version= "0.0.1"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "neo4j",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "kokoro>=0.9.2",
    "soundfile>=0.12.0",
    "aiofiles>=23.0.0",
    "numpy>=1.24.0",
    "slowapi>=0.1.9"
]
authors= [
    { name = "Gihun Ko Stephen", email = "rhrlgns96@gmail.com" }
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]